# bioinfo_bin_scripts

./: .gitignore  Makefile.am  README  bootstrap.sh  configure.ac
scripts/: Makefile.am  bam_to_bigwig.in  bam_to_genome_size.in  bam_to_genomecov_tabix.in  get_region_coverage.in  revcomp.in  sam_to_bambai.in
